# RustActixWeb4StarterWithWebSocketsAndReactCra

./: .gitignore  Cargo.toml  Dockerfile  FEATURES.md  Makefile  NOTES.md  NOTES_EXTENDED.md  README  TODO  backup.sh  build.rs  client.http  package-lock.json  rustfmt.toml
app/: .env  package-lock.json  package.json
app/src/: App.tsx  index.css
app/src/app/: constants.ts
app/src/hooks/: useHttp.ts
app/src/types/: enums.ts
app/src/utils/: index.ts  main.ts  ws.ts
config/: config.json
config/ssl/: cert.pem  key.pem
debian/: postinst  service
samples/actixweb/websocket/: NOTES.md  binserve.json
samples/actixweb/websocket/rendered_templates/: index.html
samples/actixweb/websocket/src/: client.rs  main.rs
samples/lazy-log/: NOTES.md  index.html  package-lock.json  package.json
samples/lazy-log/rendered_templates/: index.html
samples/lazy-log/src/: App.tsx
samples/lazy-log/src/dts/: index.d.ts
src/: lib.rs  main.rs
src/app/: config.rs  constants.rs  errors.rs  logger.rs  mod.rs  state.rs  sub_commands.rs
src/enums/: message_to_client_type.rs  mod.rs
src/requests/: mod.rs  post_awc_uri_request.rs  post_backup_log_request.rs  post_state_request.rs  post_ws_echo_request.rs
src/responses/: api_key_response.rs  app_state_response.rs  backup_log_response.rs  error_message_response.rs  get_state_response.rs  message_response.rs  mod.rs  ping_response.rs  post_state_response.rs  post_ws_echo_response.rs
src/server/: handlers.rs  mod.rs  utils.rs
src/util/: mod.rs  shell_command.rs  util.rs
src/websocket/: mod.rs  server.rs
static/downloads/: logs.tgz
